Use callouts to highlight user action post-TF-generation

--- a/docs/terraform/customize/validation-dependencies.mdx
+++ b/docs/terraform/customize/validation-dependencies.mdx
@@ -4,6 +4,8 @@ description: |
   Add custom validation logic and manage attribute dependencies in Terraform providers.
 ---
 
+import { Callout } from "@/mdx/components";
+
 # Validation and Dependencies
 
 ##  Prevent Conflicting Attributes
@@ -163,8 +165,9 @@ components:
           type: integer
           x-speakeasy-plan-validators: AgeValidator
 ```
-
-In this scenario, when Speakeasy next generates the Terraform provider, it will bootstrap a custom validator file located at `internal/validators/int64validators/age_validator.go`, and import the schema configuration wherever `x-speakeasy-plan-validators: AgeValidator` is referenced. You can modify the validator file to contain your logic.
+<Callout title="Note" type="info">
+  Once you've added the `x-speakeasy-plan-validators` extension with a modifier, Speakeasy's next Terraform provider generation will bootstrap a custom validator file. Using the previous YAML snippet as an example, the modifier will be located at `internal/validators/int64validators/age_validator.go`, and import the schema configuration wherever `x-speakeasy-plan-validators: AgeValidator` is referenced. You can modify the validator file to contain your logic.
+</Callout>
 
 #### Implementation Notes
 
