Use callouts to highlight user action post-TF-generation (#94)

--- a/docs/terraform/customize/plan-modification.mdx
+++ b/docs/terraform/customize/plan-modification.mdx
@@ -3,6 +3,8 @@ title: "Plan Modification"
 description: "Learn how to customize Terraform plan behavior."
 ---
 
+import { Callout } from "@/mdx/components";
+
 # Plan Modification
 
 ## Custom Attribute Plan Modification
@@ -25,7 +27,9 @@ components:
           x-speakeasy-plan-modifiers: AgeModifier
 ```
 
-In this scenario, when Speakeasy next generates the Terraform provider, it will bootstrap a custom plan modifier file, located at `internal/planmodifiers/int64planmodifier/age_modifier.go`, and import the schema configuration wherever `x-speakeasy-plan-modifiers: AgeModifier` is referenced.
+<Callout title="Note" type="info">
+  Once you've added the `x-speakeasy-plan-modifiers` extension with a modifier, Speakeasy's next Terraform provider generation will bootstrap a custom plan modifier file. Using the previous YAML snippet as an example, the modifier will be located at `internal/planmodifiers/int64planmodifier/age_modifier.go`, and import the schema configuration wherever `x-speakeasy-plan-modifiers: AgeModifier` is referenced.
+</Callout>
 
 The `x-speakeasy-plan-modifiers` extension supports an array of names as well, such as:
 
@@ -36,8 +40,6 @@ x-speakeasy-plan-modifiers:
 ```
 
 ### Implementation Notes
-
-### Implementation notes
 
 A plan modifier is a type that implements the plan modifier interface defined by the `terraform-plugin-framework`. A unique plan modifier is bootstrapped in the appropriate subfolder for the Terraform type that it is applied to, which is usually one of the following:
 
