Refactor entity mapping documentation for clarity
Updated section headers and descriptions for clarity regarding entity operations and patch semantics.

--- a/docs/terraform/customize/entity-mapping.mdx
+++ b/docs/terraform/customize/entity-mapping.mdx
@@ -321,11 +321,11 @@ In this example:
 
 The `WaitForCompleted` polling method for the API operation defaults to a 5 second interval, however the create entity operation overrides to a 10 second interval.
 
-### Only-Send-Changed-Attributes
+### Update Patch Semantics
 
-Define automatic patch semantics for Terraform provider update operations via the `x-speakeasy-entity-operation` extension in the OpenAPI Specification document. When enabled, update operations will only send attributes that have changed from their prior state, rather than sending the entire resource representation.
+Define automatic patch semantics for Terraform provider update operations via the `x-speakeasy-entity-operation` extension in the OpenAPI Specification document. When enabled, entity operations will only send attributes that have changed from their prior state, rather than sending the entire resource representation.
 
-This is particularly useful for APIs that support partial updates (PATCH semantics) where sending unchanged fields may cause unintended side effects or where bandwidth efficiency is important.
+This is particularly useful for APIs that support partial updates (such as PATCH semantics) where sending unchanged fields may cause unintended side effects or where bandwidth efficiency is important.
 
 #### Basic Usage
 
@@ -355,7 +355,7 @@ In this example:
               $ref: '#/components/schemas/ResourceResponse'
 ```
 
-The `create,update` entity operation uses the `only-send-changed-attributes` patch style. During update operations, the generated Terraform provider will compare each attribute against its prior state and only include attributes that have changed in the API request.
+The `create,update` entity operation uses the `only-send-changed-attributes` patch style. During entity operations, the generated Terraform provider will compare each attribute against its prior state and only include attributes that have changed in the API request.
 
 #### Configuration
 
