--- a/docs/sdks/languages/php/oss-comparison-php.mdx
+++ b/docs/sdks/languages/php/oss-comparison-php.mdx
@@ -826,30 +826,25 @@ require 'vendor/autoload.php';
 use Speakeasy\TrainTravelSdk;
 use Speakeasy\TrainTravelSdk\Models\Components;
 
-$sdk = TrainTravelSdk\TrainTravelSDK::builder()
+$sdk = TrainTravel\TrainTravelSDK::builder()
     ->setSecurity(
         '<YOUR_O_AUTH2_HERE>'
     )
     ->build();
 
 $body = new Components\BookingPayment(
-    amount: 49.99,
     currency: Components\Currency::Gbp,
-    source: new Components\Card(
+    source: new Components\BankAccount(
         name: 'J. Doe',
-        number: '4242424242424242',
-        cvc: '123',
-        expMonth: 12,
-        expYear: 2025,
-        addressLine1: '123 Fake Street',
-        addressLine2: '4th Floor',
-        addressCity: 'London',
-        addressCountry: 'gb',
-        addressPostCode: 'N12 9XX',
+        number: '00012345',
+        sortCode: '000123',
+        accountType: Components\AccountType::Individual,
+        bankName: 'Starling Bank',
+        country: 'gb',
     ),
 );
 
-$response = $sdk->bookings->payments->create(
+$response = $sdk->payments->createForBooking(
     bookingId: '1725ff48-ab45-4bb5-9d02-88745177dedb',
     body: $body
 
